src/objects/IEC_Agency_Type__c.object
<CustomObject>
    <description>Represents multiple agency types used for IEC</description>
    <fields>
        <fullName>Agency_Program_Code__c</fullName>
        <description>Holds a specific one letter value code for each Agency Program</description>
        <label>Agency Program Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Program__c</fullName>
        <description>Represents the program of the Agency Type</description>
        <label>Agency Program</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_of_Activity__c</fullName>
        <description>Represents the area of activity of the IEC Agency Type</description>
        <label>Area of Activity</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>IEC Agency Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Area_of_Activity__c</columns>
        <columns>Agency_Program__c</columns>
        <columns>Agency_Program_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AT-{000}</displayFormat>
        <label>Agency Type</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IEC Agency Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>